# par-entbench

./: .gitignore  ARCHITECTURE.drawio  ARCH_SYSTEM.drawio  AUTO_COMMIT.sh  CONTRIBUTING.md  DATA_INDEX.md  EVAL_PIPELINE.drawio  EXPANSION_SUMMARY.md  EXPERIMENT_METRICS.json  EXPERIMENT_RESULTS.md  FINAL_REPORT_TEMPLATE.md  LICENSE  NEW_TASKS_MANIFEST.md  PILOT_COMPLETION_CHECKLIST.md  README.md  analyze_for_paper.py  analyze_significance.py  auto_analyze.sh  combine_results.py  docker-compose.yml  estimate_cost.sh  final_analysis.py  generate_final_results.py  mypy.ini  next_phase.sh  paper_stats.txt  par_data_menu.py  pyproject.toml
.github/workflows/: ci.yml
entbench/: config.yaml
results/: DATA_MANIFEST.md  METRICS_BY_ROUTER.csv  RHO_ANALYSIS.csv  rho_analysis.json
results/combined/: ANALYSIS.json  COMBINED_ANALYSIS.md  EXT-001_all_frontier_seed1.json  EXT-001_all_frontier_seed2.json  EXT-001_all_frontier_seed3.json  EXT-001_all_small_seed1.json  EXT-001_all_small_seed2.json  EXT-001_all_small_seed3.json  EXT-001_frugal_cascade_seed1.json  EXT-001_frugal_cascade_seed2.json  EXT-001_frugal_cascade_seed3.json  EXT-001_par_lite_seed1.json  EXT-001_par_lite_seed2.json  EXT-001_par_lite_seed3.json  EXT-001_par_seed1.json  EXT-001_par_seed2.json  EXT-001_par_seed3.json  EXT-001_sink_frontier_seed1.json  EXT-001_sink_frontier_seed2.json  EXT-001_sink_frontier_seed3.json  EXT-001_source_frontier_seed1.json  EXT-001_source_frontier_seed2.json  EXT-001_source_frontier_seed3.json  EXT-002_all_frontier_seed1.json  EXT-002_all_frontier_seed2.json  EXT-002_all_frontier_seed3.json  EXT-002_all_small_seed1.json  EXT-002_all_small_seed2.json  EXT-002_all_small_seed3.json  EXT-002_frugal_cascade_seed1.json  EXT-002_frugal_cascade_seed2.json  EXT-002_frugal_cascade_seed3.json  EXT-002_par_lite_seed1.json  EXT-002_par_lite_seed2.json  EXT-002_par_lite_seed3.json  EXT-002_par_seed1.json  EXT-002_par_seed2.json  EXT-002_par_seed3.json  EXT-002_sink_frontier_seed1.json  EXT-002_sink_frontier_seed2.json  (+1120 more)
results/new_tasks/: EXT-004_par_seed1.json  EXT-005_par_seed1.json  EXT-006_par_seed1.json  EXT-007_par_seed1.json  MGO-004_par_seed1.json  MGO-005_par_seed1.json  MGO-006_par_seed1.json  MGO-007_par_seed1.json  MGO-008_par_seed1.json  MTP-004_par_seed1.json  MTP-005_par_seed1.json  MTP-006_par_seed1.json  MTP-007_par_seed1.json  MTP-008_par_seed1.json  PAC-004_par_seed1.json  (+18 more)
tests/: test_dispatcher.py  test_observability.py  test_types.py
(+1000 files in other folders)
