[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "par-entbench"
version = "1.0.0"
description = "Planner-as-Router (PaR) reference implementation and EntBench benchmark for cost-aware multi-agent LLM workflow evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Vivek Kumar Singh" }
]
keywords = [
    "llm",
    "multi-agent",
    "routing",
    "cost-optimization",
    "agents",
    "benchmark",
    "langgraph"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "pyyaml>=6.0",
    "pymongo>=4.6.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
]
analysis = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.13",
]

[project.scripts]
par-entbench = "entbench.harness:main"

[project.urls]
Homepage = "https://github.com/vksingh/par-entbench"
Documentation = "https://github.com/vksingh/par-entbench/tree/main/docs"
Repository = "https://github.com/vksingh/par-entbench"
Issues = "https://github.com/vksingh/par-entbench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/par", "src/baselines", "src/entbench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
